@@ -3,6 +3,7 @@
  394139 small memory leaks
  393352 no icon in the `post new article' window (Darren Albers)
  393357 no icon in the `about' window (Darren Albers)
+ 388717 improve connection error messages (Guilhem Bonnefille)
 
 0.120 "Plate of Shrimp"
  356329 'Save Attachments' only saves one of multiple attachments (Walt)
